--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "dashboard-crud-nextjs",
+  "name": "nextjs",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,6 +14,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.2.1",
     "@hookform/resolvers": "^3.10.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
