--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "nextjs-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,7 +15,6 @@
   "dependencies": {
     "@emotion/is-prop-valid": "^1.4.0",
     "@hookform/resolvers": "^3.10.0",
-    "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -23,7 +22,7 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.1.7",
@@ -48,31 +47,29 @@
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.12",
-    "@types/react-dom": "18.2.7",
-    "@types/uuid": "^10.0.0",
-    "autoprefixer": "10.4.15",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "exceljs": "^4.4.0",
-    "framer-motion": "^12.23.21",
+    "framer-motion": "^12.0.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
-    "postcss": "8.4.30",
+    "postcss": "^8.4.40",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.3.8",
-    "react-hook-form": "^7.63.0",
+    "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.6",
     "uuid": "^11.1.0",
@@ -80,19 +77,20 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@next/eslint-plugin-next": "^15.5.4",
-    "@types/node": "^24.5.2",
-    "@types/react": "^19.1.13",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^15.5.4",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-react": "^7.37.5",
+    "@eslint/js": "^9.12.0",
+    "@next/eslint-plugin-next": "^14.2.11",
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.7",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.11",
+    "eslint-config-prettier": "^10.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-security": "^2.1.0",
-    "globals": "^16.4.0",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.1"
+    "globals": "^13.24.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.7.0"
   }
 }
